--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # API Configuration
 # Leave empty for production (uses relative URLs)
 # Set to your backend URL for development if not using proxy
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=https://mern-practice-backend-ten.vercel.app
